--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dev_dependencies:
   gradients: ^0.1.1+2
   percent_indicator: ^4.2.3
   gradient_borders:
+  flutter_expanded_tile: ^0.3.7
+  otp_text_field: ^1.1.3
+  flutter_otp_text_field: ^1.1.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
