--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dev_dependencies:
   google_maps_flutter: ^2.2.5
   google_maps:
   location:
-  flutter_polyline_points:
+  flutter_staggered_grid_view: ^0.4.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
