--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dev_dependencies:
   flutter_staggered_grid_view: ^0.4.0
   date_time_picker: ^2.1.0
   intl: ^0.17.0
+  image_picker: ^0.8.7+4
+  modal_bottom_sheet: ^2.1.2
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
