--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,6 @@ dev_dependencies:
     sdk: flutter
   google_fonts: ^4.0.3
   gradients: ^0.1.1+2
-  percent_indicator: ^4.2.3
-  gradient_borders:
-  flutter_expanded_tile: ^0.3.7
   otp_text_field: ^1.1.3
   flutter_otp_text_field: ^1.1.1
   google_maps_flutter: ^2.2.5
@@ -56,6 +53,7 @@ dev_dependencies:
   image_picker: ^0.8.7+4
   flutter_svg: ^2.0.5
   modal_bottom_sheet: ^2.1.2
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -80,6 +78,7 @@ flutter:
     - images/HomeImages/
     - images/FeatureList/
     - images/Agent/
+    - images/Notification/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
