--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   google_fonts: ^4.0.3
-  gradients: ^0.1.1+2
-  otp_text_field: ^1.1.3
   flutter_otp_text_field: ^1.1.1
   google_maps_flutter: ^2.2.5
   flutter_staggered_grid_view: ^0.4.0
-  date_time_picker: ^2.1.0
   intl: ^0.17.0
   flutter_rating_bar: ^4.0.1
   image_picker: ^0.8.7+4
@@ -76,6 +73,7 @@ flutter:
     - images/FeatureList/
     - images/Agent/
     - images/Notification/
+    - images/Search/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
